# antropomorphic_project

./: CMakeLists.txt
launch/: start_ellipsoidal_motion.launch
scripts/: generate_matrixes.py
src/: antropomorphic_end_effector_mover.py  fk_antropomorphic_arm.py  generate_matrixes copy.py  generate_matrixes.py  ik_antropomorphic_arm copy.py  ik_antropomorphic_arm.py  move_joints.py  rviz_marker.py  viz.rviz
